Exercice1/compiling_error.txt
/home/nicolas/github/Session3/Exercice1/main.cpp: In function ‘int main()’:
/home/nicolas/github/Session3/Exercice1/main.cpp:23:25: error: no matching function for call to ‘end(int [n])’
     cout << std::end(foo) << endl;
                         ^
In file included from /usr/include/c++/8/bits/range_access.h:36,
                 from /usr/include/c++/8/string:51,
                 from /usr/include/c++/8/bits/locale_classes.h:40,
                 from /usr/include/c++/8/bits/ios_base.h:41,
                 from /usr/include/c++/8/ios:42,
                 from /usr/include/c++/8/ostream:38,
                 from /usr/include/c++/8/iostream:39,
                 from /home/nicolas/github/Session3/Exercice1/main.cpp:1:
/usr/include/c++/8/initializer_list:99:5: note: candidate: ‘template<class _Tp> constexpr const _Tp* std::end(std::initializer_list<_Tp>)’
     end(initializer_list<_Tp> __ils) noexcept
     ^~~
/usr/include/c++/8/initializer_list:99:5: note:   template argument deduction/substitution failed:
/home/nicolas/github/Session3/Exercice1/main.cpp:23:25: note:   mismatched types ‘std::initializer_list<_Tp>’ and ‘int*’
     cout << std::end(foo) << endl;
                         ^
In file included from /usr/include/c++/8/string:51,
                 from /usr/include/c++/8/bits/locale_classes.h:40,
                 from /usr/include/c++/8/bits/ios_base.h:41,
                 from /usr/include/c++/8/ios:42,
                 from /usr/include/c++/8/ostream:38,
                 from /usr/include/c++/8/iostream:39,
                 from /home/nicolas/github/Session3/Exercice1/main.cpp:1:
/usr/include/c++/8/bits/range_access.h:68:5: note: candidate: ‘template<class _Container> decltype (__cont.end()) std::end(_Container&)’
     end(_Container& __cont) -> decltype(__cont.end())
     ^~~
/usr/include/c++/8/bits/range_access.h:68:5: note:   template argument deduction/substitution failed:
/home/nicolas/github/Session3/Exercice1/main.cpp:23:25: note:   variable-sized array type ‘int [n]’ is not a valid template argument
     cout << std::end(foo) << endl;
                         ^
In file included from /usr/include/c++/8/string:51,
                 from /usr/include/c++/8/bits/locale_classes.h:40,
                 from /usr/include/c++/8/bits/ios_base.h:41,
                 from /usr/include/c++/8/ios:42,
                 from /usr/include/c++/8/ostream:38,
                 from /usr/include/c++/8/iostream:39,
                 from /home/nicolas/github/Session3/Exercice1/main.cpp:1:
/usr/include/c++/8/bits/range_access.h:78:5: note: candidate: ‘template<class _Container> decltype (__cont.end()) std::end(const _Container&)’
     end(const _Container& __cont) -> decltype(__cont.end())
     ^~~
/usr/include/c++/8/bits/range_access.h:78:5: note:   template argument deduction/substitution failed:
/home/nicolas/github/Session3/Exercice1/main.cpp:23:25: note:   variable-sized array type ‘int [n]’ is not a valid template argument
     cout << std::end(foo) << endl;
                         ^
In file included from /usr/include/c++/8/string:51,
                 from /usr/include/c++/8/bits/locale_classes.h:40,
                 from /usr/include/c++/8/bits/ios_base.h:41,
                 from /usr/include/c++/8/ios:42,
                 from /usr/include/c++/8/ostream:38,
                 from /usr/include/c++/8/iostream:39,
                 from /home/nicolas/github/Session3/Exercice1/main.cpp:1:
/usr/include/c++/8/bits/range_access.h:97:5: note: candidate: ‘template<class _Tp, long unsigned int _Nm> constexpr _Tp* std::end(_Tp (&)[_Nm])’
     end(_Tp (&__arr)[_Nm])
     ^~~
/usr/include/c++/8/bits/range_access.h:97:5: note:   template argument deduction/substitution failed:
/home/nicolas/github/Session3/Exercice1/main.cpp:23:25: note:   variable-sized array type ‘long int’ is not a valid template argument
     cout << std::end(foo) << endl;
                         ^
In file included from /usr/include/c++/8/string:51,
                 from /usr/include/c++/8/bits/locale_classes.h:40,
                 from /usr/include/c++/8/bits/ios_base.h:41,
                 from /usr/include/c++/8/ios:42,
                 from /usr/include/c++/8/ostream:38,
                 from /usr/include/c++/8/iostream:39,
                 from /home/nicolas/github/Session3/Exercice1/main.cpp:1:
/usr/include/c++/8/bits/range_access.h:106:31: note: candidate: ‘template<class _Tp> _Tp* std::end(std::valarray<_Tp>&)’
   template<typename _Tp> _Tp* end(valarray<_Tp>&);
                               ^~~
/usr/include/c++/8/bits/range_access.h:106:31: note:   template argument deduction/substitution failed:
/home/nicolas/github/Session3/Exercice1/main.cpp:23:25: note:   mismatched types ‘std::valarray<_Tp>’ and ‘int [n]’
     cout << std::end(foo) << endl;
                         ^
In file included from /usr/include/c++/8/string:51,
                 from /usr/include/c++/8/bits/locale_classes.h:40,
                 from /usr/include/c++/8/bits/ios_base.h:41,
                 from /usr/include/c++/8/ios:42,
                 from /usr/include/c++/8/ostream:38,
                 from /usr/include/c++/8/iostream:39,
                 from /home/nicolas/github/Session3/Exercice1/main.cpp:1:
/usr/include/c++/8/bits/range_access.h:107:37: note: candidate: ‘template<class _Tp> const _Tp* std::end(const std::valarray<_Tp>&)’
   template<typename _Tp> const _Tp* end(const valarray<_Tp>&);
                                     ^~~
/usr/include/c++/8/bits/range_access.h:107:37: note:   template argument deduction/substitution failed:
/home/nicolas/github/Session3/Exercice1/main.cpp:23:25: note:   mismatched types ‘const std::valarray<_Tp>’ and ‘int [n]’
     cout << std::end(foo) << endl;
                         ^
